--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,5 +130,6 @@ flutter:
 flutter_assets:
   assets_path: assets/
   output_path: lib/core/images
+  class_name: MyImages 
   filename: my_images.dart
   field_prefix: 
