--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   lottie: ^3.2.0
   cached_network_image: ^3.4.1
   share_plus: ^10.1.4
+  timelines_plus: ^1.0.6
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_test:
