--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   share_plus: ^10.1.4
   timelines_plus: ^1.0.6
   timeline_tile: ^2.0.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +102,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/bottom_nav_bar_icons/
     - assets/images/
   #   - images/a_dot_ham.jpeg
 
