--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   timelines_plus: ^1.0.6
   timeline_tile: ^2.0.0
   carousel_slider: ^5.0.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
