--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ dependencies:
   lottie: ^3.2.0
   cached_network_image: ^3.4.1
   share_plus: ^10.1.4
-  timelines_plus: ^1.0.6
+  # timelines_plus: ^1.0.6
   timeline_tile: ^2.0.0
   carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
