--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   timeline_tile: ^2.0.0
   carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
+  delightful_toast: ^1.1.0
 
 dev_dependencies:
   flutter_test:
