--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
   delightful_toast: ^1.1.0
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
