integrate with firebase + update programs model + handle multi route cards

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,12 @@ dependencies:
   cached_network_image: ^3.4.1
   share_plus: ^10.1.4
   requests_inspector: ^4.2.1
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  firebase_in_app_messaging: ^0.8.1+5
+  flutter_local_notifications: ^19.2.1
+  firebase_analytics: ^11.4.5
+  firebase_crashlytics: ^4.3.5
 
   # timelines_plus: ^1.0.6
   timeline_tile: ^2.0.0
