--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/bottom_nav_bar_icons/
+    - assets/json/
     - assets/images/
   #   - images/a_dot_ham.jpeg
 
