--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,11 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   delightful_toast: ^1.1.0
   flutter_html: 3.0.0-beta.2
+  # syncfusion_flutter_pdfviewer: ^25.2.7
+  # flutter_pdfview: ^1.4.0+1
+  url_launcher: ^6.3.1
+  webview_flutter: ^4.10.0
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_test:
