--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   flutter_slidable: ^3.1.2
   path: ^1.9.0
   just_audio: ^0.9.46
+  audioplayers: ^5.2.1
   dio: ^5.8.0+1
   json_annotation: ^4.9.0
   quick_log: ^5.5.3
