--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_storage: ^2.1.1
   dartz: ^0.10.1
   equatable: ^2.0.7
+  file_picker: ^6.1.1
   google_fonts: ^6.2.1
   badges: ^3.1.2
   flutter_svg: ^2.0.17
