--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   # flutter_pdfview: ^1.4.0+1
   webview_flutter: ^4.10.0
   open_file: ^3.5.10
+  tutorial_coach_mark: ^1.3.0
 
 dev_dependencies:
   flutter_test:
