Update Android and iOS manifest permissions and descriptions
Refactored AndroidManifest.xml to properly place <queries> outside the <application> tag and removed duplicate entries. Updated Info.plist with detailed permission usage descriptions for microphone and location, and improved formatting and comments for clarity.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,44 +3,72 @@
 <plist version="1.0">
 <dict>
 	<key>LSApplicationQueriesSchemes</key>
-		<array>
-   			<string>https</string>
-    		<string>http</string>
-		</array>
- 	<key>NSMicrophoneUsageDescription</key>
-     	<string>Some message to describe why you need this permission</string>
+	<array>
+		<string>https</string>
+		<string>http</string>
+	</array>
+	
+	<!-- Permission descriptions -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to the microphone to record audio for voice features.</string>
+	
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location services to provide location-based features.</string>
+	
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app needs access to location services to provide location-based features.</string>
+	
+	<!-- App bundle information -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	
 	<key>CFBundleDisplayName</key>
 	<string>Eazifly Student</string>
+	
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	
 	<key>CFBundleName</key>
 	<string>eazifly_student</string>
+	
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
+	
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	
+	<!-- iOS requirements -->
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	
+	<!-- UI configuration -->
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	
+	<!-- Supported orientations for iPhone -->
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	
+	<!-- Supported orientations for iPad -->
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -48,8 +76,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	
+	<!-- Performance settings -->
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
