--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,31 +41,31 @@ dependencies:
   get_storage: ^2.1.1
   dartz: ^0.10.1
   equatable: ^2.0.7
-  file_picker: ^6.1.1
+  file_picker: ^10.2.0
   google_fonts: ^6.2.1
   badges: ^3.1.2
   flutter_svg: ^2.0.17
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
-  pinput: ^5.0.1
+  intl: ^0.20.2
+  # pinput: ^5.0.1
   modal_bottom_sheet: ^3.0.0
-  flutter_advanced_switch: ^3.1.0
+  # flutter_advanced_switch: ^3.1.0
   image_picker: ^1.1.2
-  voice_message_package: ^2.2.1
-  audio_waveforms: ^1.0.5
+  # voice_message_package: ^2.2.1
+  # audio_waveforms: ^1.0.5
 
-  flash: ^3.1.1
-  syncfusion_flutter_charts: ^25.2.7
+  # flash: ^3.1.1
+  syncfusion_flutter_charts: ^30.1.42
   flutter_sound: ^9.18.0  # For audio playback and visualization
-  path_provider: ^2.0.11  # For file path handling
-  permission_handler: ^10.0.0  # For handling permissions
+  path_provider: ^2.1.5  # For file path handling
+  permission_handler: ^11.3.1  # For handling permissions
   # audioplayers: ^6.4.0
-  record: ^5.2.1
+  record: ^6.0.0
   percent_indicator: ^4.2.4
   flutter_slidable: ^3.1.2
   path: ^1.9.0
-  # just_audio: ^0.9.46
+  just_audio: ^0.9.46
   audioplayers: ^5.2.1
   dio: ^5.8.0+1
   json_annotation: ^4.9.0
