--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geideapay:
+    git:
+      url: https://github.com/ahmed30238/Flutter-SDK.git
+      ref: main # branch name
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -42,31 +46,22 @@ dependencies:
   dartz: ^0.10.1
   equatable: ^2.0.7
   file_picker: ^10.2.0
-  google_fonts: ^6.2.1
+  google_fonts: ^5.0.0
   badges: ^3.1.2
   flutter_svg: ^2.0.17
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
-  # pinput: ^5.0.1
   modal_bottom_sheet: ^3.0.0
-  # flutter_advanced_switch: ^3.1.0
   image_picker: ^1.1.2
-  # voice_message_package: ^2.2.1
-  # audio_waveforms: ^1.0.5
-
-  # flash: ^3.1.1
   syncfusion_flutter_charts: ^30.1.42
   flutter_sound: ^9.18.0  # For audio playback and visualization
   path_provider: ^2.1.5  # For file path handling
-  permission_handler: ^11.3.1  # For handling permissions
-  # audioplayers: ^6.4.0
+  permission_handler: ^11.3.1  
   record: ^6.0.0
   percent_indicator: ^4.2.4
   flutter_slidable: ^3.1.2
-  path: ^1.9.0
   just_audio: ^0.9.46
-  audioplayers: ^5.2.1
   dio: ^5.8.0+1
   json_annotation: ^4.9.0
   quick_log: ^5.5.3
@@ -83,18 +78,17 @@ dependencies:
   flutter_local_notifications: ^19.2.1
   firebase_analytics: ^11.4.5
   firebase_crashlytics: ^4.3.5
-
-  # timelines_plus: ^1.0.6
   timeline_tile: ^2.0.0
   carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
   delightful_toast: ^1.1.0
   flutter_html: 3.0.0-beta.2
-  # syncfusion_flutter_pdfviewer: ^25.2.7
-  # flutter_pdfview: ^1.4.0+1
   webview_flutter: ^4.10.0
   open_file: ^3.5.10
   tutorial_coach_mark: ^1.3.0
+
+dependency_overrides:
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
