--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: eazifly_student
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -35,7 +35,6 @@ dependencies:
       url: https://github.com/ahmed30238/Flutter-SDK.git
       ref: main # branch name
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -55,9 +54,9 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   image_picker: ^1.1.2
   syncfusion_flutter_charts: ^30.1.42
-  flutter_sound: ^9.18.0  # For audio playback and visualization
-  path_provider: ^2.1.5  # For file path handling
-  permission_handler: ^11.3.1  
+  flutter_sound: ^9.18.0 # For audio playback and visualization
+  path_provider: ^2.1.5 # For file path handling
+  permission_handler: ^11.3.1
   record: ^6.0.0
   percent_indicator: ^4.2.4
   flutter_slidable: ^3.1.2
@@ -86,6 +85,7 @@ dependencies:
   webview_flutter: ^4.10.0
   open_file: ^3.5.10
   tutorial_coach_mark: ^1.3.0
+  flutter_launcher_icons: ^0.14.4
 
 dependency_overrides:
   intl: ^0.20.2
@@ -108,7 +108,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -150,6 +149,10 @@ flutter:
 flutter_assets:
   assets_path: assets/
   output_path: lib/core/images
-  class_name: MyImages 
+  class_name: MyImages
   filename: my_images.dart
-  field_prefix: 
+  field_prefix:
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_icon.png"
