--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,33 +1,36 @@
-on:
-    push:
-      branches:
-        - main
-  
 name: Build My Apps
-  
+
+on:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
     name: Build and Release new apk
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
-  
+
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
           flutter-version: 3.32.8
+
       - run: flutter --version
       - run: flutter clean
       - run: flutter pub get
       - run: flutter build apk --release --split-per-abi
-  
+
       - name: Push to Releases
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*"
-          tag: v0.0.2
+          tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
