--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,7 +10,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.eazifly_student"
+    namespace = "com.example.HodaElnas"
     compileSdk = 35
     ndkVersion = "27.0.12077973"
 
@@ -26,7 +26,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.eazifly_student"
+        applicationId = "com.example.HodaElnas"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 24
