--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -155,4 +155,4 @@ flutter_assets:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/images/app_icon.png"
+  image_path: "assets/images/app_logo.png"
