edit gradle to release

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <application
-        android:label="هدي للناس"
+        android:label="هدى للناس"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         
