re-integrate with firebase

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -35,7 +35,7 @@
 	<string>6.0</string>
 	
 	<key>CFBundleName</key>
-	<string>eazifly_student</string>
+	<string>HodaElnas</string>
 	
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
