--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -119,6 +119,7 @@ flutter:
     - assets/bottom_nav_bar_icons/
     - assets/json/
     - assets/images/
+    - shorebird.yaml
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
