--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.0.0+6
 
 environment:
   sdk: ^3.5.2
@@ -44,7 +44,7 @@ dependencies:
   get_storage: ^2.1.1
   dartz: ^0.10.1
   equatable: ^2.0.7
-  file_picker: ^10.2.0
+  file_picker: ^10.3.1
   google_fonts: ^5.0.0
   badges: ^3.1.2
   flutter_svg: ^2.0.17
@@ -71,12 +71,12 @@ dependencies:
   share_plus: ^10.1.4
   url_launcher: ^6.3.1
   requests_inspector: ^4.2.1
-  firebase_core: ^3.13.0
-  firebase_messaging: ^15.2.5
-  firebase_in_app_messaging: ^0.8.1+5
+  firebase_core: ^4.0.0
+  firebase_messaging: ^16.0.0
+  firebase_in_app_messaging: ^0.9.0
   flutter_local_notifications: ^19.2.1
-  firebase_analytics: ^11.4.5
-  firebase_crashlytics: ^4.3.5
+  firebase_analytics: ^12.0.0
+  firebase_crashlytics: ^5.0.0
   timeline_tile: ^2.0.0
   carousel_slider: ^5.0.0
   flutter_rating_bar: ^4.0.1
