--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+6
+version: 1.0.0+7
 
 environment:
   sdk: ^3.5.2
@@ -86,6 +86,7 @@ dependencies:
   open_file: ^3.5.10
   tutorial_coach_mark: ^1.3.0
   flutter_launcher_icons: ^0.14.4
+  shorebird_code_push: ^2.0.4
 
 dependency_overrides:
   intl: ^0.20.2
