--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,17 +24,14 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Format code (auto-fix)
+      - name: Format code
         run: dart format .
-
-      - name: Analyze code (allow warnings)
-        run: flutter analyze --no-fatal-infos || true
 
       - name: Setup Shorebird
         uses: shorebirdtech/setup-shorebird@v1
 
       - name: Create Shorebird Patch
-        run: shorebird patch android --force
+        run: shorebird patch android
         env:
           SHOREBIRD_TOKEN: ${{ secrets.SHOREBIRD_TOKEN }}
 
@@ -60,11 +57,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Format code (auto-fix)
+      - name: Format code
         run: dart format .
-
-      - name: Analyze code (allow warnings)
-        run: flutter analyze --no-fatal-infos || true
 
       - name: Build App Bundle
         run: flutter build appbundle --release
