--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,15 @@ jobs:
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/upload-keystore.jks
+          echo "$KEYSTORE_BASE64" | base64 -di > android/app/upload-keystore.jks
+
+      - name: Verify Keystore
+        run: |
+          if [ ! -f android/app/upload-keystore.jks ]; then
+            echo "ERROR: Keystore file not created!"
+            exit 1
+          fi
+          echo "Keystore created successfully"
 
       - name: Create key.properties
         run: |
@@ -75,7 +83,15 @@ jobs:
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          echo "$KEYSTORE_BASE64" | base64 -d > android/app/upload-keystore.jks
+          echo "$KEYSTORE_BASE64" | base64 -di > android/app/upload-keystore.jks
+
+      - name: Verify Keystore
+        run: |
+          if [ ! -f android/app/upload-keystore.jks ]; then
+            echo "ERROR: Keystore file not created!"
+            exit 1
+          fi
+          echo "Keystore created successfully"
 
       - name: Create key.properties
         run: |
