Update keystore file path in CI workflow
Changed the keystore file path in the CI/CD workflow to '../app/upload-keystore.jks' for both build and release jobs to ensure correct file referencing during Android builds.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
           echo "storePassword=${{ secrets.KEY_STORE_PASSWORD }}" > android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-          echo "storeFile=app/upload-keystore.jks" >> android/key.properties
+          echo "storeFile=../app/upload-keystore.jks" >> android/key.properties
 
       - name: Install dependencies
         run: flutter pub get
@@ -100,7 +100,7 @@ jobs:
           echo "storePassword=${{ secrets.KEY_STORE_PASSWORD }}" > android/key.properties
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
-          echo "storeFile=upload-keystore.jks" >> android/key.properties
+          echo "storeFile=../app/upload-keystore.jks" >> android/key.properties
 
       - name: Install dependencies
         run: flutter pub get
